--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon --experimental-modules --es-module-specifier-resolution=node index.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,6 +14,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.1",
     "pdf-lib": "^1.17.1",
     "sharp": "^0.32.6"
   }
